3.0 regression: no FSC
If fullscreen mode is toggled while the video window already exists, but before the video actually starts rendering, then the FSC never comes. This is easy to trigger with the NVIDIA blob taking forever to initialize.
Going back to windowed, and then fullscreen again works around it.