qt: initialize FSC fullscreen state from the vout

The playlist and vout "fullscreen" variables may contain different
values, e.g. when fullscreen is toggled during vout creation.

On vout list changes, initialize the FSC fullscreen state from the vout,
so that the FSC state is consistent with the video state.

Fixes #19697

Signed-off-by: Hugo Beauzée-Luyssen <hugo@beauzee.fr>
(cherry picked from commit 1bbd0eb5c03e489be59183e55af75282e14a17ae)
Signed-off-by: Hugo Beauzée-Luyssen <hugo@beauzee.fr>